fix: align calendar & mass services UI on  mobile and desktop

--- a/frontend/src/pages/Home/widgets/CatcomCalendar/CatcomCalendar.module.css
+++ b/frontend/src/pages/Home/widgets/CatcomCalendar/CatcomCalendar.module.css
@@ -61,7 +61,7 @@
 
 @media screen and (max-width: 480px) {
   .wrapper {
-    padding: 1rem;
+    padding: 0.5rem 0.2rem;
   }
 }
 
