--- a/frontend/src/pages/Home/widgets/MassAndServices/MassAndServices.module.css
+++ b/frontend/src/pages/Home/widgets/MassAndServices/MassAndServices.module.css
@@ -206,7 +206,7 @@
 
 @media screen and (max-width: 480px) {
   .massServices {
-    padding: 1rem;
+    padding: 0.5rem 0.2rem;
   }
   .heading {
     font-size: 1.15rem;
